# Scarlet

./: README.md
backend/: .env.example  go.mod  go.sum
backend/api/: app.go
backend/api/controller/: not_found.go  profile.go  user.go
backend/api/errors/: messages.go  response.go
backend/api/loggers/: logger.go
backend/api/middlewares/: cors.go  rateLimit.go  region.go
backend/api/utils/: getRegion.go
backend/cmd/: main.go
backend/conf/: app.conf
backend/internal/http/: client.go
backend/internal/redis/: redis.go
backend/notes/: NOTES.md  errors.json  wsEvents.json
cdn/: README.md  index.php
client/: Cargo.toml
client/assets/texts/: CharacterSkinData.xml  Education.xml  IAPProductCatalog.json  IapData.xml  Intro.xml  Intro_Skip.xml  ProductData.xml  PvEGlobalConstantData.xml  PvEItemSkillData.xml  PvESkillDetailData.xml  ResearcherTitleTypeData.xml  ScenarioDB.txt  Tutorial_1.xml  UniversalDeepLink.txt  inappproduct.txt
client/scarlet-cli/: main.rs
client/scarlet-http/: Cargo.toml
client/scarlet-http/src/: client.rs  lib.rs
client/scarlet-http/src/models/: characters_info.rs  games.rs  histories.rs  mod.rs  most_played_character.rs  profile.rs
client/src/: constants.rs  main.rs  scarlet.rs
client/src/commands/: mod.rs  profile.rs
client/src/components/embeds/: profile.rs
client/src/events/: interaction.rs  mod.rs  ready.rs
documentation/: README.md  docs.json  index.mdx
documentation/api-reference/: introduction.mdx  openapi.yml
scripts/: .gitignore  README.md  download.py  pyproject.toml
(+24 files in other folders)
