[package]
name = "scarlet-bot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scarlet-cli"
path = "scarlet-cli/main.rs"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.4"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
scarlet = { version = "0.1.0", path = "./scarlet-http" }
log = "0.4.27"
env_logger = "0.11.8"
